# awsx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  about.toml  deny.toml  readme.py
.github/workflows/: ci.yml
.tools/: cargo-about-markdown-template.hbs
src/: error.rs  lib.rs  main.rs  parameter.rs  provider.rs  s3.rs  stack.rs  template.rs
src/command/: identify_new_parameters.rs  mod.rs  override_parameters.rs  update_deployed_template.rs
